# flowbot

./: .env.example  .gitignore  README.md  TESTING_GUIDE.md  implementation_plan.md.resolved  pyproject.toml  render.yaml  requirements.txt
app/: config.py  main.py
app/api/: businesses.py  leads.py  messages.py
app/core/: actions.py  brain.py  decision.py  knowledge.py
app/db/: init_db.py  session.py
app/models/: action_log.py  business.py  conversation.py  lead.py
app/schemas/: business.py  lead.py  message.py
app/services/: email_client.py  llm_client.py
app/utils/: logger.py  prompt_builder.py
business_configs/: _template.yaml  demo_clinic.yaml  demo_restaurant.yaml
knowledge_base/demo_clinic/: faqs.json  pricing.json  services.json
knowledge_base/demo_restaurant/: faqs.json  menu.json  pricing.json
tests/: test_actions.py  test_brain.py  test_decision.py  test_knowledge.py  test_messages.py  test_prompt_builder.py
